@@ -1,3 +1,12 @@
+2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/data/DataUtilities.java
+    (equal(double[][], double[][])): New method,
+    * tests/org/jfree/data/junit/DataUtilitiesTests.java
+    (testEqual): New method,
+    (suite): Likewise,
+    (main): Likewise.
+
 2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java
